<resources>
    <string name="app_name">Portinari</string>

	<!-- Generic Dialogs -->
    <string name="dialog_action_ok">ok</string>
    <string name="dialog_loading">carregando&#8230;</string>
    <string name="dialog_action_cancel">cancelar</string>
    <string name="dialog_error_title">cesculpe</string>

    <!-- Sprinklers -->
    <string name="dialog_loading_sprinkler_status">iniciando irrigação&#8230;</string>
    <string name="header_portinari">portinari home</string>
    <string name="label_area_1">área 1</string>
    <string name="label_area_2">área 2</string>
    <string name="timer">00:00</string>
    <string name="irrigation_time">tempo de irrigação</string>

    <!-- Date Format -->
    <string name="format_date">%1$td/%1$tm/%1$tY %1$tH:%1$tM</string>

    <!-- Network -->
    <string name="txt_connection_error">"não há conexões de rede no momento. Verifique sua conexão de rede.</string>
    <string name="btn_iniciar">iniciar</string>
    <string name="btn_parar">parar</string>

    <!-- Admin Config -->

    <string name="pref_label_api_url">API</string>
    <string name="pref_summary_api_url">Entre com a URL da API</string>
    <string name="pref_label_http_debugger">Debugger HTTP</string>
    <string name="pref_summary_http_debugger">Exibe notificações das requisições HTTP</string>

</resources>
